gcc/testsuite/rust/compile/mod_in_types_ns2.rs
#![feature(no_core)]
#![no_core]

mod foo {
    mod bar {}

    fn baz() -> bar {} // { dg-error "expected type, found module" }
}
